--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "yavd",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "yet another virtual dom library",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test-istanbul",
-    "test-coverify": "mochify --transform babelify --cover --reporter spec",
-    "test-istanbul": "mochify --transform babelify --plugin [ mochify-istanbul --exclude '**/+(test|node_modules)/**/*' --report text-summary --report lcov --dir ./coverage ] --reporter spec",
+    "test": "npm run test-istanbul && npm run upload-coverage",
+    "test-istanbul": "mochify --transform [ babelify --only test ] --plugin [ mochify-istanbul --instrumenter babel-istanbul --report text-summary --report lcov ] --reporter spec",
+    "upload-coverage": "[ -n \"$CI\" ] && cat ./coverage/lcov.info | ./node_modules/.bin/codecov || true",
     "start": "mochify --transform babelify --reporter min --watch"
   },
   "repository": {
@@ -27,13 +27,18 @@
   },
   "homepage": "https://github.com/Swatinem/yavd#readme",
   "devDependencies": {
+    "babel-istanbul": "^0.2.0",
     "babel-runtime": "^5.4.7",
     "babelify": "^6.1.2",
     "chai": "^2.3.0",
-    "isparta": "^3.0.3",
-    "istanbul": "^0.3.14",
+    "codecov.io": "^0.1.2",
     "mocha": "^2.2.5",
     "mochify": "^2.9.0",
-    "mochify-istanbul": "^2.1.3"
+    "mochify-istanbul": "Swatinem/mochify-istanbul#instrumenter"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
   }
 }
