--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: node_js
 node_js:
   - "0.12"
   - "iojs"
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -f ./coverage/lcov.info
