--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "yet another virtual dom library",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test-istanbul && npm run upload-coverage",
-    "test-istanbul": "mochify --transform [ babelify --only test ] --plugin [ mochify-istanbul --instrumenter babel-istanbul --report text-summary --report lcov --report json --exclude '**/node_modules/**' --exclude '**/test/**' ] --reporter spec",
-    "upload-coverage": "[ -n \"$CI\" ] && cat ./coverage/lcov.info | ./node_modules/.bin/codecov || true",
+    "test": "mochify --transform [ babelify --only test ] --plugin [ mochify-istanbul --instrumenter babel-istanbul --report text-summary --report lcov --report json --exclude '**/node_modules/**' --exclude '**/test/**' ] --reporter spec",
     "start": "mochify --transform babelify --reporter min --watch"
   },
   "repository": {
@@ -31,7 +29,6 @@
     "babel-runtime": "^5.4.7",
     "babelify": "^6.1.2",
     "chai": "^2.3.0",
-    "codecov.io": "^0.1.2",
     "mocha": "^2.2.5",
     "mochify": "^2.9.0",
     "mochify-istanbul": "^2.2.0"
