--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "yet another virtual dom library",
   "main": "index.js",
   "scripts": {
-    "test": "mochify --transform [ babelify --only test ] --plugin [ mochify-istanbul --instrumenter babel-istanbul --report text-summary --report lcov --report json --exclude '**/node_modules/**' --exclude '**/test/**' ] --reporter spec",
+    "test": "mochify --transform [ babelify --only test ] --plugin [ mochify-istanbul --instrumenter babel-istanbul --report text-summary --report lcov --exclude '**/node_modules/**' --exclude '**/test/**' ] --reporter spec",
     "start": "mochify --transform babelify --reporter min --watch"
   },
   "repository": {
