update deps; use dir option for mochify-istanbul

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "yet another virtual dom library",
   "main": "index.js",
   "scripts": {
-    "test": "mochify --transform [ babelify --only test ] --plugin [ mochify-istanbul --instrumenter babel-istanbul --report text-summary --report lcov --exclude '**/node_modules/**' --exclude '**/test/**' ] --reporter spec",
+    "test": "mochify --transform [ babelify --only test ] --plugin [ mochify-istanbul --instrumenter babel-istanbul --report text-summary --report lcov --dir ./coverage --exclude '**/node_modules/**' --exclude '**/test/**' ] --reporter spec",
     "start": "mochify --transform babelify --reporter min --watch"
   },
   "repository": {
@@ -25,13 +25,13 @@
   },
   "homepage": "https://github.com/Swatinem/yavd#readme",
   "devDependencies": {
-    "babel-istanbul": "^0.2.0",
-    "babel-runtime": "^5.4.7",
+    "babel-istanbul": "^0.2.1",
+    "babel-runtime": "^5.5.4",
     "babelify": "^6.1.2",
-    "chai": "^2.3.0",
+    "chai": "^3.0.0",
     "mocha": "^2.2.5",
     "mochify": "^2.9.0",
-    "mochify-istanbul": "^2.2.0"
+    "mochify-istanbul": "^2.2.2"
   },
   "browserify": {
     "transform": [
